Refactor: add debug messages, use new embedding model property and small fixes